# server/routers/testRouter.go
@@ -10,9 +10,6 @@ import (
 func TestRouter(engine *gin.Engine) {
 	g := engine.Group("/test")
 	{
-		g.Use(middlewares.TestMiddleware())
-
-		g.GET("/", controllers.TestController)
 		g.GET("/getToken", controllers.TestJwtGetToken)
 		g.GET("/checkToken", middlewares.Auth(), controllers.TestJwtCheckToken)
 	}
