# swagger/swagger.json
@@ -14,40 +14,6 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/test/": {
-            "get": {
-                "description": "Test Controller",
-                "consumes": [
-                    "text/plain"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Before Authorization"
-                ],
-                "summary": "TestController",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Msg",
-                        "name": "msg",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{ ok , data }"
-                    },
-                    "400": {
-                        "description": "binding error"
-                    },
-                    "404": {
-                        "description": "{ error }"
-                    }
-                }
-            }
-        },
         "/test/checkToken/": {
             "get": {
                 "security": [
